--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
+* {
+  font-family: -apple-system, BlinkMacSystemFont, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding:60px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+input{
+  color: #333333;
+  font-size: 1.3rem;
+  padding:3px;
+  width:100%;
 }
+
+
+
+.gifs-container{
+  background-color: rgba(75, 160, 240, 0.055);
+  text-align: center;
+}
+
+
+.category-title{
+
+  font-size: 2rem;
+  margin: 20px auto 10px;
+}
+
+.card{
+  align-items: center;
+  display: inline-flex;
+  flex-direction: column;
+  border: 2px solid grey;
+  border-radius:5px;
+  margin: 10px;
+  overflow: hidden;
+  
+}
+.card>img{
+  min-height: 300px;
+  max-height: 300px;
+  border-radius:2px;
+}
+
